# AutomaticApplications

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yaml  sources.yaml
docs/: architecture.md  extending.md  setup.md  troubleshooting.md
job_agent/: __init__.py  cli.py
job_agent/analytics/: __init__.py  analytics.py
job_agent/classifier/: __init__.py  boost.py  classifier.py  domain.py  prestige.py  targeting.py
job_agent/config/: __init__.py  logging.py  settings.py
job_agent/cover_letter/: __init__.py  blocks.py  generator.py
job_agent/dashboard/: __init__.py  app.py
job_agent/database/: __init__.py  base.py  models.py  repository.py
job_agent/dedupe/: __init__.py  detector.py
job_agent/documents/: __init__.py  render.py
job_agent/embeddings/: __init__.py  provider.py  service.py  store.py
job_agent/excel/: __init__.py  sync.py
job_agent/knowledge/: __init__.py  loader.py
job_agent/llm/: __init__.py  base.py  factory.py  prompts.py
job_agent/llm/prompts/: classify_job.v1.txt  classify_job.v2.txt  classify_job.v3.txt  cover_letter.v1.txt  cover_letter.v2.txt  cover_letter_hook.v1.txt  cover_letter_hook.v2.txt  parse_job.v1.txt  resume.v1.txt  resume.v2.txt
job_agent/llm/providers/: anthropic_provider.py  gemini_provider.py  mock.py  (+2 more)
job_agent/models/: __init__.py  domain.py
job_agent/orchestrator/: __init__.py  pipeline.py  states.py
job_agent/parser/: __init__.py  llm_parser.py
job_agent/resume/: __init__.py  generator.py
job_agent/retrieval/: __init__.py  retriever.py
job_agent/scrapers/: __init__.py  amazon.py  ashby.py  base.py  blocklist.py  company.py  github.py  google.py  greenhouse.py  lever.py  linkedin.py  netflix.py  registry.py  spotify.py  wellfound.py  workday.py  yc.py
job_agent/tracker/: __init__.py  tracker.py
scripts/: demo.sh  rescore.py  reset.sh  seed_user_data.sh
templates/: cover_letter.md.j2  cover_letter_formal.md.j2  resume.md.j2
tests/: conftest.py  test_blocklist.py  test_blocks_targeting.py  test_boost.py  test_database.py  test_dedupe_tracker.py  test_domain.py  test_embeddings_retrieval.py  test_faang_adapters.py  test_generators.py  test_llm.py  test_models_config.py  test_parser_classifier.py  test_pipeline_integration.py  test_prestige.py  test_scrapers.py  test_targeting.py
user_data.example/: profile.yaml
user_data.example/awards/: awards.md
user_data.example/certifications/: certifications.md
user_data.example/coursework/: coursework.md
user_data.example/cover_letter_examples/: example1.md
user_data.example/education/: education.yaml
user_data.example/experience/: marketing_assistant.md  social_media_intern.yaml
user_data.example/projects/: projects.yaml
user_data.example/publications/: publications.yaml
user_data.example/resume_bullets/: bullets.md
user_data.example/skills/: skills.md
(+7 files in other folders)
