[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
description = "AI-powered job discovery, tailoring, and application-tracking pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nolan Pozzobon" }]
keywords = ["langgraph", "jobs", "llm", "automation", "resume"]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "numpy>=1.26",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# Heavy / optional runtime capabilities. The core pipeline runs without these
# (deterministic fallbacks kick in), but installing them unlocks real behavior.
embeddings = ["sentence-transformers>=2.7", "faiss-cpu>=1.8"]
documents = ["python-docx>=1.1", "weasyprint>=62.0", "markdown>=3.6"]
providers = [
    "openai>=1.30",
    "anthropic>=0.28",
    "google-generativeai>=0.7",
]
dashboard = ["fastapi>=0.111", "uvicorn>=0.30"]
# Optional: use LangGraph for orchestration instead of the built-in state machine.
orchestration = ["langgraph>=0.2.0", "langchain-core>=0.2.0"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "pre-commit>=3.7",
    "types-PyYAML",
]
all = ["job-agent[embeddings,documents,providers,dashboard,dev]"]

[project.scripts]
job-agent = "job_agent.cli:app"

[tool.setuptools.packages.find]
include = ["job_agent*"]

[tool.setuptools.package-data]
# Ship versioned prompt templates inside the package so wheel installs work.
"job_agent.llm.prompts" = ["*.txt"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# UP017 (datetime.UTC), UP040 (`type` alias), UP042 (StrEnum) need Python 3.11/3.12;
# we support 3.10.
ignore = ["B008", "C401", "C408", "UP017", "UP040", "UP042"]

[tool.ruff.lint.per-file-ignores]
# The dashboard embeds a self-contained HTML/JS document as a string literal.
"job_agent/dashboard/app.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: end-to-end tests that exercise multiple subsystems",
    "slow: tests that may take longer to run",
]

[tool.coverage.run]
source = ["job_agent"]
omit = ["*/tests/*"]
